# pulsorclip

./: .dockerignore  .env.example  .env.render  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CloudronManifest.json  DISCLAIMER.md  LICENSE  README.fr.md  README.md  SECURITY.md  capture.mjs  docker-compose.yml  fly.toml  package-lock.json  package.json  railway.json  render.yaml  temp_restore.tsx  test-cobalt.mjs  test-proxies.mjs  test-proxies2.mjs  test-wuksh.mjs  tsconfig.base.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  windows-build.yml
apps/bot/: package.json
apps/bot/src/: handlers.ts  index.ts  keyboards.ts  metadata.ts  monitoring.ts  notifications.ts  preferences.ts  state.ts  types.ts  utils.ts
apps/bot/src/scripts/: encode-cookies.ts  trigger-report.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: lint-results.json  next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/deployment/: page.tsx
apps/web/src/app/dmca/: page.tsx
apps/web/src/components/: clip-workbench.tsx  locale-switcher.tsx  theme-toggle.tsx
apps/web/src/lib/: external-links.ts  request-locale.ts  site-url.ts
docker/: Dockerfile  bot.Dockerfile  dev.mjs  render.Dockerfile  start-render.mjs  start.mjs
docs/: DEPLOYMENT.md  SELF-HOSTING.fr.md  TELEGRAM-BOT.md  YOUTUBE-COOKIES.md  self-hosting.md
preview/: preview.md
(+26 files in other folders)
